# quickstart-resources

./: .gitignore
.github/workflows/: chatgpt-backend   claude.yml
mcp-client-python/: README.md  client.py
mcp-client-typescript/: index.ts  package-lock.json  package.json  tsconfig.json
weather-server-python/: pyproject.toml  weather.py
weather-server-rust/: Cargo.toml  README.md
weather-server-rust/src/: main.rs
weather-server-typescript/: package-lock.json
